@startuml
!pragma layout smetana

class StreamingService {
    - users : ArrayList<User>
    - mediaLibrary : ArrayList<Media>
    - currentUser : User
}

abstract Media {
    - String title
    - int year
    - String category
}

class Movie {
- int [] movies
    play()
}

class Series {
- int[] Season
    play()
}

class Season {
    - int[] Episode
}

class Episode {
    - title : String
    - duration : int
    - episodeNumber : int
    play
}

class User {
    - username : String
    - password : String
}


'Relationer'

StreamingService  -->  User
StreamingService  --> Media


Media <|-- Movie
Media <|-- Series

Series  -->  Season
Season  -->  Episode


@enduml
